--- a/app/src/main/res/layout/item_calendar_week.xml
+++ b/app/src/main/res/layout/item_calendar_week.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/checkable_selector"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        app:check="@{item.selected}">
+        app:check="@{item.isSelected( viewModel.currentCalendarWeek )}">
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
             android:src="@drawable/ic_check_black_24dp"
             android:tint="@color/colorAccent"
             android:contentDescription="@null"
-            android:visibility="@{item.selected}"/>
+            android:visibility="@{item.isSelected( viewModel.currentCalendarWeek )}"/>
 
     </de.wackernagel.essbar.utils.CheckableFrameLayout>
 </layout>
