--- a/app/src/main/res/layout/item_menu_lunch.xml
+++ b/app/src/main/res/layout/item_menu_lunch.xml
@@ -37,14 +37,14 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="56dp"
             android:lineSpacingMultiplier="1.2"
-            android:text="@{@string/menu_name_and_price(item.menuName, item.price)}"
+            android:text="@{item.menuName}"
             tools:text="Hartweizen Nudeln mit Tomatenpesto auf Hackfleisch"
             style="@style/ListItemSecondary"/>
 
         <CheckBox
             android:id="@+id/checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginEnd="16dp"
             android:layout_gravity="end|top"
             android:visibility="@{item.editable}"
